--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,16 +22,20 @@ classifiers = [
 dependencies = [
     "beets==2.0.0",
     "flask==3.1.0",
-    "pydantic==2.9.2"
+    "pydantic==2.9.2",
+    "sqlalchemy==2.0.36",
+    "Flask-JWT-Extended==4.7.1",
+    "Flask-Bcrypt==1.0.1",
+    "Flask-SQLAlchemy==3.1.1",
 ]
 
 [project.scripts]
-disbeet="disbeet:main.main"
+beetman="api:main.main"
 
 [project.urls]
-Documentation = "https://github.com/unknown/disbeet#readme"
-Issues = "https://github.com/griffin-rickle/disbeet/issues"
-Source = "https://github.com/griffin-rickle/disbeet"
+Documentation = "https://github.com/griffin-rickle/beetman"
+Issues = "https://github.com/griffin-rickle/beetman/issues"
+Source = "https://github.com/griffin-rickle/beetman"
 
 [project.optional-dependencies]
 dev = [
