--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
 line.length = 120
 
 [tool.mypy]
+plugins = [ 'sqlalchemy.ext.mypy.plugin' ]
 disable_error_code = [
     'import-untyped'
 ]
