--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
+    "@types/js-cookie": "^3.0.6",
     "babel-loader": "^9.2.1",
     "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.96.1",
@@ -26,6 +27,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2"
