Update beetman script to point to correct main file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
 ]
 
 [project.scripts]
-beetman="api:main.main"
+beetman="api:beetman.main"
 
 [project.urls]
 Documentation = "https://github.com/griffin-rickle/beetman"
