--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "Flask-JWT-Extended==4.7.1",
     "Flask-Bcrypt==1.0.1",
     "Flask-SQLAlchemy==3.1.1",
+    "gunicorn==21.2.0",
+    "python-dotenv==1.0.1"
 ]
 
 [project.scripts]
