--- a/src/client/package.json
+++ b/src/client/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.6.0"
   }
 }
