--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "Flask-Bcrypt==1.0.1",
     "Flask-SQLAlchemy==3.1.1",
     "gunicorn==21.2.0",
-    "python-dotenv==1.0.1"
+    "python-dotenv==1.0.1",
+    "Flask-Cors==5.0.0"
 ]
 
 [project.scripts]
